--- a/style.css
+++ b/style.css
@@ -45,3 +45,11 @@ h1 {
     text-align: center;
     font-size: 40px;
 }
+
+.btn {
+    font-size: 35px;
+}
+
+.footer {
+    text-align: center;
+}
